--- a/style.css
+++ b/style.css
@@ -12,7 +12,46 @@
 
 .calculator-frame {
   width: 400px;
-  height: 500px;
+  height: 600px;
   background-color: aquamarine;
+  border-radius: 20px;
+  border: 2px black solid;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
+.display {
+  font-size: 20px;
+  background-color: antiquewhite;
+  height: 50px;
+  line-height: 50px;
+  margin: 10px;
+  padding-right: 10px;
+  border: 1px solid black;
+  border-radius: 20px;
+  text-align: end;
+}
+
+.keyboard {
+  height: 70%;
+  font-size: 20px;
+  margin: 10px;
+  border: 1px solid black;
+  background-color: antiquewhite;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  gap: 20px;
+  border-radius: 20px;
+}
+
+.keys {
+  height: 50px;
+  width: 60px;
+  line-height: 50px;
+  border: 1px solid black;
+  border-radius: 5px;
+}
