--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 #calculator-frame {
   width: 300px;
-  height: 450px;
+  height: 550px;
   background-color: aquamarine;
   border-radius: 20px;
   display: flex;
@@ -38,6 +38,9 @@
   height: 40px;
   text-align: end;
   line-height: 40px;
+  margin-bottom: 20px;
+
+
 }
 
 #upper-number {
@@ -51,7 +54,7 @@
 
 
 #keyboard {
-  height: 70%;
+  height: 65%;
   font-size: 20px;
   border: 1px solid grey;
   background-color: whitesmoke;
