--- a/style.css
+++ b/style.css
@@ -8,30 +8,12 @@ body,
 html {
   width: 100%;
   height: 100vh;
-}
-
-.container {
-  height: 100vh;
-  background: rgb(238,174,202);
   background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
 
 .title {
   display: none;
 }
-/*.title {
-  height: 100px;
-  text-align: center;
-  font-size: 30px;
-  margin-top: 25px;
-}
-
-span {
-  font-weight: 900;
-  text-decoration-line: underline;
-  text-decoration-style: double;
-  color: rgba(219, 57, 57, 1);
-}*/
 
 /*Main frame of the calculator object*/
 #calculator-frame {
@@ -132,16 +114,42 @@ span {
   font-size: 50px;
 }
 
-/*Footer section with links*/
-/*.footer {
-  width: 750px;
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: auto;
-  font-size: 10px;
-  padding: 10px;
-}
-*/
 .footer {
   display: none;
+}
+
+@media (min-width: 481px) {
+  .container {
+    width: 30%;
+    height: 50%;
+  }
+
+  #calculator-frame {
+    height: auto;
+  }
+  
+  .title {
+    display: block;
+    height: 100px;
+    text-align: center;
+    font-size: 30px;
+    margin-top: 25px;
+  }
+
+  span {
+    font-weight: 900;
+    text-decoration-line: underline;
+    text-decoration-style: double;
+    color: rgba(219, 57, 57, 1);
+  }
+
+  .footer {
+    width: 750px;
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: auto;
+    font-size: 10px;
+    padding: 10px;
+  }
+
 }
