--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 * {
-  margin: 0;
-  padding: 0;
   font-family: 'Orbitron', sans-serif;
 }
 
 body, 
 html {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100vh;
   background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .title {
@@ -118,16 +120,25 @@ html {
   display: none;
 }
 
+
 @media (min-width: 481px) {
+
   .container {
     width: 30%;
-    height: 50%;
-  }
-
-  #calculator-frame {
-    height: auto;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
   
+  #calculator-frame {
+    margin-top: 50px;
+    height: 50%;
+  }
+  
+ 
   .title {
     display: block;
     height: 100px;
